--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/Frame.png">
     <link rel="stylesheet" href="style.css">
     <title>My Gaming Website</title>
 </head>
+
 <body>
-    <h1>hi i am here</h1>
+    <section id="navigation">
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="images/Frame.png" alt="gamer logo">
+                    <h3><span style="color: #FF42A5;">G</span>amer</h3>
+                </div>
+
+                <div class="top-right-all">
+                    <ul class="nav-items">
+                        <li>About Us</li>
+                        <li>Develpers</li>
+                        <li>
+                            <div class="nav-top-right">
+                                <p>Follow Us On</p>
+                                <img src="images/yt.png" alt="youtube icon">
+                                <img src="images/tiktok.png" alt="tiktok icon">
+                            </div>
+
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <div class="head-banner">
+
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
