--- a/index.html
+++ b/index.html
@@ -10,35 +10,57 @@
 </head>
 
 <body>
-    <section id="navigation">
-        <div class="container">
-            <nav>
-                <div class="logo">
-                    <img src="images/Frame.png" alt="gamer logo">
-                    <h3><span style="color: #FF42A5;">G</span>amer</h3>
-                </div>
+    <header>
+        <section id="navigation">
+            <div class="container">
+                <nav>
+                    <div class="logo">
+                        <img src="images/Frame.png" alt="gamer logo">
+                        <h3><span style="color: #FF42A5;">G</span>amer</h3>
+                    </div>
 
-                <div class="top-right-all">
-                    <ul class="nav-items">
-                        <li>About Us</li>
-                        <li>Develpers</li>
-                        <li>
-                            <div class="nav-top-right">
-                                <p>Follow Us On</p>
-                                <img src="images/yt.png" alt="youtube icon">
-                                <img src="images/tiktok.png" alt="tiktok icon">
-                            </div>
+                    <div class="top-right-all">
+                        <ul class="nav-items">
+                            <li>About Us</li>
+                            <li>Develpers</li>
+                            <li>
+                                <div class="nav-top-right">
+                                    <p>Follow Us On</p>
+                                    <img src="images/yt.png" alt="youtube icon">
+                                    <img src="images/tiktok.png" alt="tiktok icon">
+                                </div>
 
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <div class="head-banner">
-
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <section id="banner">
+            <div class="container">
+                <div class="banner-left">
+                    <h4>Play Like The</h4>
+                    <h2>G.O.A.T.</h2>
+                    <ul>
+                        <li>1-Click instant play</li>
+                        <li>No Download</li>
+                        <li>1000s of supported online games</li>
+                    </ul>
+                    <div class="button-group">
+                        <button>Sign In</button>
+                        <button>Go Rogue</button>
+                    </div>
+                </div>
+
+                <div class="banner-right">
+                    <img src="images/Group 18.png" alt="banner image">
+                </div>
+            </div>
+        </section>
+
+    </header>
+
 </body>
 
 </html>
