banner section completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!-- nav section start -->
         <section id="navigation">
             <div class="container">
                 <nav>
@@ -21,8 +22,8 @@
 
                     <div class="top-right-all">
                         <ul class="nav-items">
-                            <li>About Us</li>
-                            <li>Develpers</li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Develpers</a></li>
                             <li>
                                 <div class="nav-top-right">
                                     <p>Follow Us On</p>
@@ -37,25 +38,33 @@
             </div>
         </section>
 
+        <!-- Banner section start -->
         <section id="banner">
-            <div class="container">
+
+            <img src="images/Group 14.png" alt="bg-banner">
+            <div class="container full-banner-flex">
+
                 <div class="banner-left">
-                    <h4>Play Like The</h4>
-                    <h2>G.O.A.T.</h2>
-                    <ul>
-                        <li>1-Click instant play</li>
-                        <li>No Download</li>
-                        <li>1000s of supported online games</li>
-                    </ul>
-                    <div class="button-group">
-                        <button>Sign In</button>
-                        <button>Go Rogue</button>
+                    <div class="content-positioning">
+                        <h4>Play Like The</h4>
+                        <h2>G.O.A.T.</h2>
+                        <ul>
+                            <li>1-Click instant play</li>
+                            <li>No Download</li>
+                            <li>1000s of supported online games</li>
+                        </ul>
+                        <div class="button-group">
+                            <button>Sign In</button>
+                            <button>Go Rogue</button>
+                        </div>
                     </div>
                 </div>
 
+
                 <div class="banner-right">
-                    <img src="images/Group 18.png" alt="banner image">
+                    <img style="width: 500px;" src="images/Group 18.png" alt="banner image">
                 </div>
+
             </div>
         </section>
 
