--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/Frame.png">
+    <link rel="icon" type="image/x-icon" href="./images/Frame.png">
     <link rel="stylesheet" href="style.css">
     <title>My Gaming Website</title>
 </head>
