online gaming section complete

--- a/index.html
+++ b/index.html
@@ -67,8 +67,37 @@
 
             </div>
         </section>
-
     </header>
+
+    <main class="container">
+
+        <!-- Online gaming section start -->
+        <section id="online-gaming-flex">
+            <div class="online-gaming-title">
+                <h2>Online Games <span style="color: #F948B2;">Funny Videos</span></h2>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+
+            <div class="online-gaming-main">
+                <div>
+                    <img src="images/Rectangle 4.png" alt="image">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 5.png" alt="image">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 7.png" alt="image">
+                    <p>Breaking game records like OG records like OG</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 6.png" alt="image">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
 
