--- a/index.html
+++ b/index.html
@@ -79,19 +79,35 @@
             </div>
 
             <div class="online-gaming-main">
-                <div>
+                <div >
+                    <div class="hover-me">
+                        <img src="images/play.png" alt="watch icon">
+                        <p>Watch Now</p>
+                    </div>
                     <img src="images/Rectangle 4.png" alt="image">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
-                <div>
+                <div >
+                    <div class="hover-me">
+                        <img src="images/play.png" alt="watch icon">
+                        <p>Watch Now</p>
+                    </div>
                     <img src="images/Rectangle 5.png" alt="image">
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div>
+                    <div class="hover-me">
+                        <img src="images/play.png" alt="watch icon">
+                        <p>Watch Now</p>
+                    </div>
                     <img src="images/Rectangle 7.png" alt="image">
                     <p>Breaking game records like OG records like OG</p>
                 </div>
                 <div>
+                    <div class="hover-me">
+                        <img src="images/play.png" alt="watch icon">
+                        <p>Watch Now</p>
+                    </div>
                     <img src="images/Rectangle 6.png" alt="image">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
