Play instantly section half done

--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- Play instantly section start -->
+        <section id="play-instantly-flex">
+            <div class="play-instantly-title">
+                <h2><span style="color: #F948B2;">Play Instantly,</span> No Downloads No Installs.</h2>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+
+            <div class="play-instantly-image">
+                <img src="images/Rectangle 55.png" alt="image">
+                <img src="images/Rectangle 66.png" alt="image">
+            </div>
+        </section>
     </main>
 
 </body>
