--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./images/Frame.png">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type='text/css'>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>My Gaming Website</title>
 </head>
 
@@ -79,7 +83,7 @@
             </div>
 
             <div class="online-gaming-main">
-                <div >
+                <div>
                     <div class="hover-me">
                         <img src="images/play.png" alt="watch icon">
                         <p>Watch Now</p>
@@ -87,7 +91,7 @@
                     <img src="images/Rectangle 4.png" alt="image">
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
-                <div >
+                <div>
                     <div class="hover-me">
                         <img src="images/play.png" alt="watch icon">
                         <p>Watch Now</p>
@@ -118,7 +122,8 @@
         <section id="play-instantly-flex">
             <div class="play-instantly-title">
                 <h2><span style="color: #F948B2;">Play Instantly,</span> No Downloads No Installs.</h2>
-                <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
             </div>
 
             <div class="play-instantly-image">
@@ -126,7 +131,103 @@
                 <img src="images/Rectangle 66.png" alt="image">
             </div>
         </section>
+
+        <!-- all buttons section -->
+        <section id="buttons-flex">
+            <div class="row-1">
+                <button>
+                    <img src="images/Rectangle 11.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 12.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 13.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 14.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 15.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+            </div>
+
+            <div class="row-2">
+                <button>
+                    <img src="images/Rectangle 16.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 17.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 18.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+                <button>
+                    <img src="images/Rectangle 19.png" alt="image-btn">
+                    <p>Action Games</p>
+                </button>
+
+
+            </div>
+
+
+        </section>
     </main>
+
+    <footer>
+        <section class="container">
+
+            <div class="logo">
+                <img src="images/Frame.png" alt="gamer logo">
+                <h3><span style="color: #FF42A5;">G</span>amer</h3>
+            </div>
+
+            <div class="foot-menu">
+                <ul>
+                    <li><a href="#">Our Story</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">Web Games</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">My Account</a></li>
+
+                </ul>
+            </div>
+
+            <div class="foot-icons">
+                <ul>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-apple" aria-hidden="true"></i></a></li>
+
+                </ul>
+            </div>
+
+            <div class="foot-menu-2">
+                <ul>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="#">Privacy Settings</a></li>
+                </ul>
+            </div>
+            <div class="foot-para">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
+
+        </section>
+    </footer>
 
 </body>
 
